# AI-telegram-answers

./: .env  README.md  pyproject.toml
bot/: main.py
bot/core/: config.py  constants.py
bot/handlers/: __init__.py  common_router.py
bot/helpers/: messages.py
bot/middleware/: __init__.py  clean_text.py  length_check.py  restrication.py  throtting.py  user_last_messages.py
bot/services/: base_prompt_service.py  openai_service.py
