[project]
name = "aitelegramanswers"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruslan",email = "pyclanp@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram>=3.27.0,<4.0.0",
    "openai>=2.31.0,<3.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "tenacity>=9.1.4,<10.0.0",
]

[tool.poetry]
packages = [{ include = "bot" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
